Fixed the spacing for posts list

--- a/css/main.scss
+++ b/css/main.scss
@@ -104,6 +104,14 @@ body {
     text-align: center;
 }
 
+.pages-menu {
+    color: white;
+}
+
+.post-list > li {
+    margin-bottom: 10px;
+}
+
 #adventure {
     max-width: 100%;
     border-radius: 5px;
